syntax = "proto3";

package peers.aibox.v1;

// NOTE: Adjust go_package to your actual module path when integrating.
// option go_package = "github.com/your_org/peers-touch/station/proto/gen/aibox/v1;aiboxv1";

import "google/protobuf/timestamp.proto";

// Standard provider types supported
enum ProviderType {
  PROVIDER_TYPE_UNSPECIFIED = 0;
  PROVIDER_TYPE_OPENAI = 1;
  PROVIDER_TYPE_ANTHROPIC = 2;
  PROVIDER_TYPE_OLLAMA = 3;
  PROVIDER_TYPE_CUSTOM = 9;
}

// Provider runtime configuration; returned with key material omitted by server
message ProviderConfig {
  string api_key = 1;           // server should omit in responses for safety
  string endpoint = 2;          // base URL
  string proxy_url = 3;         // optional proxy URL
  int32 timeout_seconds = 4;    // request timeout
  int32 max_retries = 5;        // retry limit
}

// AI provider record
message AiProvider {
  string id = 1;
  ProviderType type = 2;
  string name = 3;
  string display_name = 4;
  bool enabled = 5;
  string description = 6;
  string logo_url = 7;
  int32 sort = 8;
  ProviderConfig config = 9;
  google.protobuf.Timestamp created_at = 10;
  google.protobuf.Timestamp updated_at = 11;
}