// PEERS_GENERATION_CONFIG:
//   targets: [backend]
//   model_only: true

syntax = "proto3";

package peers_touch.v1.peers_touch_station.ai_box;

option go_package = "github.com/peers-touch/peers-touch/station/app/subserver/ai-box/proto_gen/v1/peers_touch_station/ai_box";

import "google/protobuf/timestamp.proto";

// AI服务提供商
message Provider {
  string id = 1;                    // 提供商ID
  string name = 2;                  // 提供商名称 (如: openai, anthropic)
  bool enabled = 3;                // 是否启用
  string description = 4;          // 描述信息
  string logo = 5;                  // Logo URL或base64
  int32 sort = 6;                   // 排序权重
  string check_model = 7;          // 检测模型
  string source_type = 8;          // 源类型
  string key_vaults = 9;           // 密钥配置 (JSON字符串)
  string settings = 10;            // 设置配置 (JSON字符串)
  string config = 11;              // 扩展配置 (JSON字符串)
  google.protobuf.Timestamp accessed_at = 12;  // 访问时间
  google.protobuf.Timestamp created_at = 13;   // 创建时间
  google.protobuf.Timestamp updated_at = 14;   // 更新时间
}

// 创建提供商请求
message CreateProviderRequest {
  string name = 1;                  // 提供商名称
  string description = 2;          // 描述信息
  string logo = 3;                  // Logo URL或base64
  int32 sort = 4;                   // 排序权重
  string check_model = 5;          // 检测模型
  string source_type = 6;          // 源类型
  string key_vaults = 7;           // 密钥配置 (JSON字符串)
  string settings = 8;             // 设置配置 (JSON字符串)
  string config = 9;               // 扩展配置 (JSON字符串)
}

// 创建提供商响应
message CreateProviderResponse {
  Provider provider = 1;          // 创建的提供商
}

// 更新提供商请求
message UpdateProviderRequest {
  string id = 1;                    // 提供商ID
  string name = 2;                  // 提供商名称
  string description = 3;          // 描述信息
  string logo = 4;                  // Logo URL或base64
  int32 sort = 5;                   // 排序权重
  bool enabled = 6;                // 是否启用
  string check_model = 7;          // 检测模型
  string source_type = 8;          // 源类型
  string key_vaults = 9;           // 密钥配置 (JSON字符串)
  string settings = 10;            // 设置配置 (JSON字符串)
  string config = 11;              // 扩展配置 (JSON字符串)
}

// 更新提供商响应
message UpdateProviderResponse {
  Provider provider = 1;          // 更新的提供商
}

// 删除提供商请求
message DeleteProviderRequest {
  string id = 1;                    // 提供商ID
}

// 删除提供商响应
message DeleteProviderResponse {
  bool success = 1;                // 是否成功
}

// 获取提供商请求
message GetProviderRequest {
  string id = 1;                    // 提供商ID
}

// 获取提供商响应
message GetProviderResponse {
  Provider provider = 1;          // 提供商信息
}

// 列出提供商请求
message ListProvidersRequest {
  int32 page = 1;                   // 页码
  int32 page_size = 2;             // 每页数量
  bool enabled_only = 3;           // 只显示启用的
}

// 列出提供商响应
message ListProvidersResponse {
  repeated Provider providers = 1; // 提供商列表
  int32 total = 2;                  // 总数
  int32 page = 3;                   // 当前页码
  int32 page_size = 4;              // 每页数量
}

// 测试提供商请求
message TestProviderRequest {
  string id = 1;                    // 提供商ID
}

// 测试提供商响应
message TestProviderResponse {
  bool success = 1;                // 是否成功
  string message = 2;              // 测试消息
}